feat: update command conditions to use orOp for permission checks